--- a/.htaccess
+++ b/.htaccess
@@ -4,7 +4,7 @@
   RewriteEngine on
 
   # if your app is in a subfolder
-  RewriteBase /jsmude/
+  RewriteBase /Lemontrac/
 
   # test string is a valid files
   RewriteCond %{SCRIPT_FILENAME} !-f
@@ -16,5 +16,3 @@
   # forces the rewrite engine to append a query string part of the
   # substitution string to the existing string, instead of replacing it.
 </IfModule>
-
-ErrorDocument 404 /jsmude/mock.php
